feature: aggiunta di un nuovo scenario di test per validazione bug 18674 (errore in caso di aggiunta tag contenente una data)