@@ -323,8 +323,12 @@ public class SafeStorageSteps {
         request.setContentType("application/pdf");
         request.setStatus("SAVED");
         request.setDocumentType(type);
-        request.setTags(tagList.stream().collect(Collectors.toMap(
-                tag -> tag.split(":")[0], tag -> Arrays.asList(tag.split(":")[1].split(",")))));
+        if (tagList.contains("tagWithDate")) {
+            request.setTags(Map.of("lc_start_date", List.of("2026-02-26T10:00:03Z")));
+        } else {
+            request.setTags(tagList.stream().collect(Collectors.toMap(
+                    tag -> tag.split(":")[0], tag -> Arrays.asList(tag.split(":")[1].split(",")))));
+        }
         try {
             FileCreationResponse fileCreationResponse = safeStorageClient.createFile(sha256, "SHA256", request);
             loadToPresignedUrl(fileCreationResponse, sha256, resourcePath);
@@ -629,6 +633,11 @@ public class SafeStorageSteps {
 
         if (expectedTags.contains("null")) {
             Assertions.assertTrue(tagMap.isEmpty());
+        } else if (expectedTags.contains("tagWithDate")) {
+            assert tagMap != null;
+            Assertions.assertEquals(expectedTags.size(), tagMap.size());
+            Assertions.assertTrue(tagMap.containsKey("lc_start_date"));
+            Assertions.assertTrue(tagMap.get("lc_start_date").contains("2026-02-26T10:00:03Z"));
         } else {
             assert tagMap != null;
             Assertions.assertEquals(expectedTags.size(), tagMap.size());
